# LynxML

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-multisql.txt
src/datalynxml/app/: app.py  segment.py
src/datalynxml/data/database/: backend_db_tools.py  knowledge_vault_utils.py
src/datalynxml/data/database/integrations/: big_query_sql.py  encryption.py  integration.py  multi_sql.py
src/datalynxml/data/database/testing/: bird_db_tools.py
src/datalynxml/lynxml/: chat.py  minichat.py  minichat_sql_lookup.py  plots.py  prompts.py  sql_lookup.py  utils.py
src/datalynxml/lynxml/anthropic_config/: claude_sql_explanation_config.py  claude_sql_query_config.py
src/datalynxml/lynxml/gpt_config/: gpt_header_config.py  gpt_sql_explanation_config.py  gpt_sql_query_config.py  minichat_gpt_sql_explanation_config.py  minichat_gpt_sql_query_config.py  readme.txt
src/datalynxml/lynxml/testing/bird/: postprocess_manual.py  test.py
src/datalynxml/lynxml/testing/spider/: explore.ipynb  postprocess_auto.py  test.py
src/datalynxml/text/: utils.py
src/datalynxml/text/text_completion/anthropic_completion/: claude_chat_completion.py
src/datalynxml/text/text_completion/openai_completion/: gpt_chat_completion.py
src/datalynxml/text/text_vectorization/: openai_vectorization.py
